# Cricket_Analysis___Python

./: .gitignore  README.md  main.py  match_train_predictor.py  pyproject.toml  requirement.txt
assets/: styles.css
data/: Match.csv  Team.csv
models/: encoders.pkl  match_predictor.pkl
pages/: Match_Predictor.py  Overview.py  Player_Insights.py  Report_Exporter.py  Team_Insights.py
pages/__pycache__/: Player_Insights.cpython-312.pyc.2289570129248  Team_Insights.cpython-312.pyc.1689743566176
reports/: player_stats.xlsx
utils/: data_loader.py  excel_export.py  pdf_export.py  prepocessing.py  visualization.py
